# rust-template

./: Cargo.toml  LICENSE  README.md
.cargo-husky/hooks/: pre-push
.github/workflows/: follow-the-white-rabbit.yml  knock-knock.yml  the-matrix-has-you.yml  wake-up.yml
